# Project-IV-FYP-Collaborative-Tasks-of-a-Dual-Arm-System

./: README.md
ar_track_alvar/ar_track_alvar/launch/: pr2_indiv_no_kinect2.launch
open_manipulator/open_manipulator_controller/launch/: open_manipulator_controller.launch
open_manipulator/open_manipulator_description/urdf/: 2open_manipulator.gazebo.xacro  2open_manipulator.transmission.xacro  2open_manipulator.urdf.xacro  2open_manipulator_arms.urdf  2open_manipulator_robots.urdf  2open_manipulator_robots.urdf.xacro
open_manipulator/open_manipulator_teleop/launch/: open_manipulator_teleop_joystick.launch
open_manipulator_controls/open_manipulator_controllers/config/: joint_trajectory_controller.yaml  joint_trajectory_controller_gazebo.yaml
open_manipulator_controls/open_manipulator_controllers/launch/: joint_trajectory_controller.launch
open_manipulator_controls/open_manipulator_controllers/scripts/: blob.py  depth_image_test.py  joint_sub.py  object_tracking.py  p_and_p.py  pick_hold2.py  realsense_tracking_ball.py  teaching_2.py  test1.py  test2.py  test3.py  test_4.py  test_camera.py  test_cpp.cpp  tracking_ball.py
open_manipulator_controls/open_manipulator_hw/config/: hardware.yaml
open_manipulator_controls/open_manipulator_hw/include/open_manipulator_hw/: hardware_interface.h
open_manipulator_controls/open_manipulator_hw/launch/: open_manipulator_control.launch
open_manipulator_controls/open_manipulator_hw/src/: hardware_interface.cpp
open_manipulator_controls/open_manipulator_moveit_config/: package.xml
open_manipulator_controls/open_manipulator_moveit_config/config/: fake_controllers.yaml  gazebo_open_manipulator_two_arms.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  open_manipulator_two_arms.srdf  ros_controllers.yaml  ros_controllers1.yaml  ros_controllers2.yaml  sensors_realsense_depthmap.yaml  sensors_realsense_pointcloud.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
open_manipulator_controls/open_manipulator_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
open_manipulator_perceptions/open_manipulator_ar_markers/launch/: ar_pose.launch  ar_pose2.launch
open_manipulator_perceptions/open_manipulator_pick_and_place/: CMakeLists.txt
open_manipulator_perceptions/open_manipulator_pick_and_place/launch/: open_manipulator_pick_and_place_dual.launch  task1.launch  task1.main.launch  task2.launch  task3.launch  task4_PID.launch
open_manipulator_perceptions/open_manipulator_pick_and_place/src/: hough.py  level_checker.py  robot_poses.cpp  robot_poses.h  task1.cpp  task1_main.cpp  task2.cpp  task3.cpp  task4_PID.cpp
realsense-ros/realsense2_camera/launch/: rs_camera.launch  rs_d435_camera_with_model.launch
realsense-ros/realsense2_camera/scripts/: blob_test.py  testing_ros.py
